@@ -10,11 +10,16 @@ What's New in Python 3.3 Alpha 1?
 Core and Builtins
 -----------------
 
-- Check for NULL result in PyType_FromSpec.
+- Issue #11168: Remove filename debug variable from PyEval_EvalFrameEx().
+  It encoded the Unicode filename to UTF-8, but the encoding fails on
+  undecodable filename (on surrogate characters) which raises an unexpected
+  UnicodeEncodeError on recursion limit.
 
 - Issue #11187: Remove bootstrap code (use ASCII) of
   PyUnicode_AsEncodedString(), it was replaced by a better fallback (use the
   locale encoding) in PyUnicode_EncodeFSDefault().
+
+- Check for NULL result in PyType_FromSpec.
 
 Library
 -------
